--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-pillow
-yt-dlp
-python-dotenv
-spotipy
-Telethon
-spotdl
-shazamio
-lyricsgenius
-aiosqlite
-wget
-FastTelethonhelper
-lxml
-webdriver_manager
-selenium
+pillow==10.3.0
+yt-dlp==2024.08.06
+python-dotenv==1.0.1
+spotipy==2.24.0
+Telethon==1.35.0
+spotdl==4.2.4
+shazamio==0.6.0
+lyricsgenius==3.0.1
+aiosqlite==0.19.0
+wget==3.2
+FastTelethonhelper==0.0.15
+lxml==5.3.0
+webdriver-manager==4.0.2
+selenium==4.23.1
